syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // unary calls
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayError (HelloRequest) returns (HelloReply) {}
  // client side streaming calls
  rpc SayHelloCStream (stream HelloRequest) returns (HelloReply) {}
  rpc SayErrorCStream (stream HelloRequest) returns (HelloReply) {}
  // server side streaming calls
  rpc SayHelloSStream (ArrayHelloRequest) returns (stream HelloReply) {}
  rpc SayErrorSStream (ArrayHelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message ArrayHelloRequest {
  repeated string name = 1;
}

message HelloReply {
  string message = 1;
}
